<resources>
    <string name="app_name">report2</string>
    <string name="btn_1">복습</string>
    <string name="btn_2">응용/심화</string>
    <string name="btn_3">심화</string>
    <string name="yellow">피카츄</string>
    <string name="blue">꼬부기</string>
    <string name="red">파이리</string>
    <string name="green">이상해씨</string>
    <string name="pink">삐삐</string>
    <string name="Login">로그인</string>
    <string name="SignUp">회원가입</string>
    <string name="passwd">passwd:</string>
    <string name="id">id:</string>
    <string name="SOPT">SOPT</string>
    <string name="name">이름:</string>
    <string name="major">전공:</string>
    <string name="Submit">SUBMIT</string>
    <string name="Reset">RESET</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
</resources>
