<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.sopt.report2.LayoutActivity">

    <RelativeLayout
        android:id="@+id/yellow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorYellow">

        <ImageView
            android:id="@+id/image_yellow"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/yellow" />

        <TextView
            android:id="@+id/text_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/yellow" />

        <Button
            android:id="@+id/btn_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_yellow"
            android:layout_alignBottom="@+id/text_yellow"
            android:layout_toEndOf="@+id/text_yellow"
            android:text="@string/yellow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/image_blue"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/blue" />

        <TextView
            android:id="@+id/text_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/blue" />

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_blue"
            android:layout_alignBottom="@+id/text_blue"
            android:layout_toEndOf="@+id/text_blue"
            android:text="@string/blue" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/red"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorRed">

        <ImageView
            android:id="@+id/image_red"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/red" />

        <TextView
            android:id="@+id/text_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/red" />

        <Button
            android:id="@+id/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_red"
            android:layout_alignBottom="@+id/text_red"
            android:layout_toEndOf="@+id/text_red"
            android:text="@string/red" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/green"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorGreen">

        <ImageView
            android:id="@+id/image_green"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/green" />

        <TextView
            android:id="@+id/text_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/green" />

        <Button
            android:id="@+id/btn_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_green"
            android:layout_alignBottom="@+id/text_green"
            android:layout_toEndOf="@+id/text_green"
            android:text="@string/green" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pink"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPink">

        <ImageView
            android:id="@+id/image_pink"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/pink" />

        <TextView
            android:id="@+id/text_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pink" />

        <Button
            android:id="@+id/btn_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_pink"
            android:layout_alignBottom="@+id/text_pink"
            android:layout_toEndOf="@+id/text_pink"
            android:text="@string/pink" />
    </RelativeLayout>
</LinearLayout>
